# youtube-downloader

./: .env.example  .gitignore  README.md  data.json  format_project.sh  mkdocs.yml  pyproject.toml  test_async.ipynb
.github/workflows/: ci.yml  mkdocs.yml  python-package.yml
auto_shorts/: __init__.py  choose_videos_to_download.py  config.py  download_video.py  exceptions.py  list_popular_videos.py  most_watched_moments.py  most_watched_moments_analysis.ipynb  tiktok_trending_testing.py  upload_to_s3.py  utils.py
auto_shorts/create_dataset/: download.py  select_s3_path.py
auto_shorts/create_dataset/models/: download.py
auto_shorts/data_upload/: video_data_upload.py
auto_shorts/db/: upload.py  utils.py
auto_shorts/download/: category.py  channel.py  download_unextracted_videos.py  most_watched_moments.py  mp4.py  s3.py  transcription.py  video.py  video_info.py
auto_shorts/download/db/: _postgres.py
auto_shorts/download/models/: category.py  channel.py  transcription.py  video.py  video_info.py
auto_shorts/preprocess/: extract_audio.py  parse_response.py
auto_shorts/upload/: video_data_upload.py
auto_shorts/upload/bucket/: __init__.py
auto_shorts/upload/db/: __init__.py  _postgres.py  upload.py  utils.py
auto_shorts/video_download/: choose_videos_to_download.py  download_info.py  download_video.py  most_watched_moments.py
categories/: PL.json
data/: metrics_all_models.csv  metrics_balanced_models.csv  metrics_comedy_vids.csv  metrics_sport_vids.csv  video_ids_to_download.txt
html/auto_shorts/: config.html  index.html  tiktok_trending_testing.html  upload_to_s3.html  utils.html
html/auto_shorts/video_download/: choose_videos_to_download.html  download_info.html  download_video.html  index.html  most_watched_moments.html
noteboks/: choose_videos_to_download.py  tiktok_trending_testing.py
notebooks/: I3D_Feature_Extraction.ipynb  aggregated_stats.ipynb  async_test.ipynb  choose_videos_to_download.py  create_plots.ipynb  download_videos_without_features.ipynb  metrics.py  most_watched_moments_analysis.ipynb  plots.ipynb  preds_labels.ipynb  test_async.ipynb  test_transcription.ipynb  test_wav_from_mp4.ipynb
tests/unit/: test_download_info.py
