[tool.poetry]
name = "auto-shorts"
version = "0.1.0"
description = ""
authors = ["Jakub Wujec <kuba1302@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_shorts"}]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.72.0"
google-auth-oauthlib = "^0.8.0"
google-auth-httplib2 = "^0.1.0"
black = "^22.12.0"
isort = "^5.11.4"
pandas = "^1.5.2"
numpy = "^1.24.1"
pydantic = "^1.10.4"
pytube = "^12.1.2"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
