[tool.poetry]
name = "auto-shorts"
version = "0.1.0"
description = ""
authors = ["Jakub Wujec <kuba1302@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_shorts"}]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.72.0"
google-auth-oauthlib = "^0.8.0"
google-auth-httplib2 = "^0.1.0"
black = "^22.12.0"
isort = "^5.11.4"
pandas = "^1.5.2"
numpy = "^1.24.1"
pydantic = "^1.10.4"
pytube = "^12.1.2"
requests = "^2.28.2"
boto3 = "^1.26.97"
loguru = "^0.7.0"
pdoc3 = "^0.10.0"
jupyter = "^1.0.0"
pytest = "^7.3.0"
pytz = "^2023.3"
flake8 = "^6.0.0"
docformatter = "^1.6.4"
pytest-cov = "^4.0.0"
ffmpeg = "^1.4"
moviepy = "^1.0.3"
speechrecognition = "^3.10.0"
pocketsphinx = "^5.0.0"
youtube-transcript-api = "^0.6.0"
pylint = "^2.17.3"
pygount = "^1.5.1"
sqlalchemy = "^2.0.12"
psycopg2 = "^2.9.6"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
