[tool.poetry]
name = "auto-shorts"
version = "0.1.0"
description = ""
authors = ["Jakub Wujec <kuba1302@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_shorts"}]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.104.0"
google-auth-oauthlib = "^0.8.0"
google-auth-httplib2 = "^0.1.1"
black = "^22.12.0"
isort = "^5.12.0"
pandas = "^1.5.3"
numpy = "^1.25.2"
pydantic = "^2.4.2"
pytube = "^12.1.3"
requests = "^2.31.0"
boto3 = "^1.28.65"
loguru = "^0.7.2"
pdoc3 = "^0.10.0"
jupyter = "^1.0.0"
pytest = "^7.4.2"
pytz = "^2023.3.post1"
flake8 = "^6.1.0"
docformatter = "^1.7.5"
pytest-cov = "^4.1.0"
ffmpeg = "^1.4"
moviepy = "^1.0.3"
speechrecognition = "^3.10.0"
pocketsphinx = "^5.0.2"
youtube-transcript-api = "^0.6.1"
pylint = "^2.17.7"
pygount = "^1.6.1"
sqlalchemy = "^2.0.22"
psycopg2 = "^2.9.9"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
